# qemu-kernel-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pyvenv.cfg
.github/workflows/: pre-commit.yml
docs/superpowers/specs/: 2026-03-26-qemu-serial-log-design.md
scripts/: README.md  get_root.sh
src/qemu_kernel_mcp/: __init__.py  __main__.py  config.py  models.py  serial_proxy.py  server.py  service.py  utils.py
tests/: test_serial_proxy.py  test_service_serial_logging.py
