[project]
name = "qemu-kernel-mcp"
version = "0.1.0"
description = "MCP server for Linux kernel vulnerability research workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
]

[project.scripts]
qemu-kernel-mcp = "qemu_kernel_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qemu_kernel_mcp"]
